# brainf

./: CHANGELOG.md  CMakeLists.txt  README.md  brainf-old.c  hello.b  stack.cpp
.github/workflows/: build.yml  release.yml
examples/: cat.b
include/: common.h  run.h  stack.h
src/: main.c  run.c  stack.c
